packages/prop-house-webapp/src/components/ProposalCard/ProposalCard.module.css
.proposalCard {
  min-height: 12.5rem;
  display: flex;
  flex-direction: column;
  transition: all 0.1s ease-in-out;
}

.proposalCard:hover {
  border: 1px solid var(--brand-gray-semi-transparent);
  cursor: pointer;
  transform: scale(1.01);
  transition: all 0.15s ease-in-out;
}

.propCopy {
  font-size: small;
  color: var(--brand-black-transparent);
}

.authorContainer {
  font-size: 18px;
  font-weight: bold;
  color: var(--brand-black);
  margin-bottom: 0.8rem;
  display: flex;
  height: 50px;
}

.authorContainer span {
  font-weight: normal;
  color: var(--brand-black-transparent);
  display: inline;
}

.title {
  font-size: 22px;
  line-height: 140%;
  font-weight: bold;
  color: var(--brand-black);
  margin-bottom: 0.8rem;

  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
  /* number of lines to show */
  line-height: X;
  /* fallback */
  max-height: X * N;
  /* fallback */
}
.tooltipTitle {
  cursor: help;
}
.timestampAndlinkContainer {
  margin-top: 15px;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
}

.timestamp {
  font-size: 15px;
  color: var(--brand-gray);
  font-weight: 600;
  align-self: flex-start;
}

.scoreCopy {
  font-weight: bold;
  font-size: 15px;
  color: var(--brand-gray);
}
.truncatedTldr {
  height: 4.5rem;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}
.avatarAndPropNumber {
  display: flex;
  align-items: center;
  gap: 5px;
}

.titleContainer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 15px;
}

